<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:background="@color/amp_light_gray" android:layout_width="match_parent" android:layout_height="match_parent">
    <FrameLayout android:background="@android:color/white" android:layout_width="match_parent" android:layout_height="56dp">
        <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="0x7f0800b7"/>
        <ImageView android:layout_gravity="right|center_vertical|center_horizontal|center|end" android:id="@+id/amp_eeInfo_iv_close" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10dp" android:src="0x7f0800b9"/>
    </FrameLayout>
    <LinearLayout android:orientation="vertical" android:background="@android:color/white" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp">
        <TextView android:textSize="18dp" android:textColor="@color/amp_dark_blue" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:layout_marginTop="12dp" android:text="@string/amp_label_user_info"/>
        <RelativeLayout android:layout_width="match_parent" android:layout_height="44dp" android:layout_marginLeft="16dp" android:layout_marginTop="5dp">
            <TextView android:textSize="15dp" android:textColor="@color/amp_dark_blue" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/amp_label_device_id"/>
            <TextView android:textSize="15dp" android:textColor="@color/amp_gray" android:id="@+id/amp_eeInfo_tv_deviceId" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginRight="10dp" android:text="@string/amp_label_not_avail" android:singleLine="true" android:layout_toLeftOf="@+id/amp_eeInfo_btn_copyDeviceId" android:layout_alignParentBottom="true"/>
            <Button android:textColor="@color/amp_blue" android:gravity="center" android:id="@+id/amp_eeInfo_btn_copyDeviceId" android:background="@drawable/amp_button_bg" android:layout_width="wrap_content" android:layout_height="32dp" android:layout_marginRight="19dp" android:text="@string/amp_label_copy" android:layout_alignParentRight="true" android:layout_centerInParent="true"/>
        </RelativeLayout>
        <RelativeLayout android:layout_width="match_parent" android:layout_height="44dp" android:layout_marginLeft="16dp" android:layout_marginTop="10dp" android:layout_marginBottom="16dp">
            <TextView android:textSize="15dp" android:textColor="@color/amp_dark_blue" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/amp_label_user_id"/>
            <TextView android:textSize="15dp" android:textColor="@color/amp_gray" android:id="@+id/amp_eeInfo_tv_userId" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginRight="10dp" android:text="@string/amp_label_not_avail" android:singleLine="true" android:layout_toLeftOf="@+id/amp_eeInfo_btn_copyUserId" android:layout_alignParentBottom="true"/>
            <Button android:textColor="@color/amp_blue" android:gravity="center" android:id="@+id/amp_eeInfo_btn_copyUserId" android:background="@drawable/amp_button_bg" android:layout_width="wrap_content" android:layout_height="32dp" android:layout_marginRight="19dp" android:text="@string/amp_label_copy" android:layout_alignParentRight="true" android:layout_centerInParent="true"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
