<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:theme="@style/AppTheme.AppWidgetContainer" android:clipToPadding="false" android:layout_width="match_parent" android:layout_height="match_parent" style="@style/Widget.Locket.AppWidget.Container">
    <ImageView android:id="@+id/locket_image_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:scaleType="centerCrop" android:adjustViewBounds="true" android:cropToPadding="true" android:layout_centerInParent="true" android:contentDescription="@string/app_widget_description" app:srcCompat="@drawable/ic_widget_preview_static"/>
    <FrameLayout android:id="@+id/locket_frame_view" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignTop="@+id/locket_image_view" android:layout_alignBottom="@+id/locket_image_view" android:layout_alignStart="@+id/locket_image_view" android:layout_alignEnd="@+id/locket_image_view">
        <ImageView android:id="@+id/locket_remote_frame" android:layout_width="match_parent" android:layout_height="wrap_content" android:scaleType="fitXY" android:contentDescription="@string/frame_img"/>
        <ImageView android:id="@+id/locket_frame" android:layout_width="match_parent" android:layout_height="wrap_content" android:scaleType="fitXY" android:contentDescription="@string/frame_img"/>
    </FrameLayout>
    <FrameLayout android:id="@+id/locket_profile_view" android:background="@drawable/bg_circle_border" android:layout_width="32dp" android:layout_height="32dp" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:layout_alignBottom="@+id/locket_image_view" android:layout_marginStart="8dp" android:layout_alignStart="@+id/locket_image_view">
        <ImageView android:id="@+id/locket_profile_placeholder_bg" android:background="@drawable/bg_profile_placeholder" android:visibility="gone" android:layout_width="32dp" android:layout_height="32dp"/>
        <ImageView android:id="@+id/locket_profile_image_view" android:layout_width="32dp" android:layout_height="32dp" android:scaleType="centerInside" android:cropToPadding="true" android:contentDescription="@string/app_widget_description"/>
        <ImageView android:id="@+id/locket_profile_image_border" android:background="@drawable/bg_circle_border" android:visibility="gone" android:layout_width="32dp" android:layout_height="32dp"/>
    </FrameLayout>
    <FrameLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:layout_alignBottom="@+id/locket_image_view" android:layout_marginStart="6dp" android:layout_marginEnd="8dp" android:layout_toEndOf="@+id/locket_profile_view" android:layout_alignEnd="@+id/locket_image_view">
        <ImageView android:id="@+id/locket_overlay_gradient_bg_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:scaleType="center"/>
        <ImageView android:id="@+id/locket_overlay_text_view" android:background="@drawable/bg_overlay_light" android:layout_width="wrap_content" android:layout_height="wrap_content" android:scaleType="center"/>
        <ImageView android:id="@+id/locket_caption_view" android:background="@drawable/bg_rounded" android:layout_width="wrap_content" android:layout_height="wrap_content" android:scaleType="center"/>
    </FrameLayout>
    <ImageView android:id="@+id/locket_missed_moments_badge" android:background="@drawable/bg_badge" android:paddingBottom="2dp" android:visibility="gone" android:layout_width="28dp" android:layout_height="28dp" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:scaleType="center" android:layout_alignTop="@+id/locket_image_view" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:layout_alignEnd="@+id/locket_image_view"/>
    <ImageView android:id="@+id/locket_missed_moments_badge_max" android:background="@drawable/bg_badge" android:paddingBottom="2dp" android:visibility="gone" android:layout_width="38dp" android:layout_height="28dp" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:scaleType="center" android:layout_alignTop="@+id/locket_image_view" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:layout_alignEnd="@+id/locket_image_view"/>
    <FrameLayout android:gravity="center" android:id="@+id/locket_streak_frame" android:background="@drawable/bg_streak_two_digits" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="28dp" android:layout_marginTop="8dp" android:layout_alignTop="@+id/locket_image_view" android:layout_marginStart="8dp" android:layout_alignStart="@+id/locket_image_view" android:elevation="12dp">
        <LinearLayout android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:translationY="-0.25dp" android:paddingHorizontal="9dp" android:paddingVertical="1.25dp">
            <ImageView android:id="@+id/locket_streak_icon" android:layout_width="10dp" android:layout_height="match_parent" android:src="@drawable/ic_streak" android:contentDescription="@string/streak_img_des" android:translationY="0.6dp"/>
            <ImageView android:id="@+id/locket_streak_text" android:paddingLeft="4dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:scaleType="center" android:contentDescription="@string/streak_txt"/>
        </LinearLayout>
    </FrameLayout>
</RelativeLayout>
